fix- grid collapse and Add white background

--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@
     width: 60px;
     box-sizing: border-box;
     border: 2px solid black;
-    background-color: aqua;
+    background-color: white;
 }
 
 .select{
